--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
 </div>
-<table class="table table-striped table-dark mt-4">
+<table *ngIf="!charge && heroes.length > 0" class="table table-striped table-dark mt-4">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -31,7 +31,7 @@
         <button class="btn btn-info mr-1" [routerLink]="['/heroe', heroe.Id]">
           <i class="fa fa-pen"></i>
         </button>
-        <button class="btn btn-danger ">
+        <button (click)="deleteHeroe(heroe, i)" class="btn btn-danger ">
           <i class="fa fa-trash"></i>
         </button>
       </td>
@@ -39,7 +39,7 @@
 
 </table>
 
-<div class="alert alert-warning text-center mt-3">
+<div *ngIf="!charge && heroes.length === 0" class="alert alert-warning text-center mt-3">
   <h4 class="alert-heading">No register</h4>
   <p>
     <i class="fa  fa-exclamation fa-2x"></i>
@@ -47,7 +47,7 @@
 
 </div>
 
-<div class="alert alert-info text-center mt-3">
+<div *ngIf="charge" class="alert alert-info text-center mt-3">
   <h4 class="alert-heading">load...</h4>
   <p>
     <i class="fa fa-sync-alt fa-spin fa-2x"></i>
